add unit tests for specimen translator